Change alignment icons Change box shadow styles icons Add drop shadow to toolbar Fix toolbar item and lines

--- a/src/components/alignment-control/editor.scss
+++ b/src/components/alignment-control/editor.scss
@@ -44,6 +44,7 @@
         svg {
             display: block;
             height: 100%;
+            width: 20px;
             margin: auto;
             fill: #464a53;
         }
